<resources>
    <string name="app_name">HttpConnetExample</string>
    <string name="http_get">原生Get</string>
    <string name="volley_get">volley Get</string>
    <string name="volley_post">volley Post</string>
    <string name="connect_by_ok_http">OkHttp连接</string>
    <string name="http_post">原生Post</string>
    <string name="response_success">响应成功</string>
    <string name="response_failed">响应失败</string>
    <string name="http_upload_file">原生上传文件</string>
    <string name="okhttp_get">Okhttp Get</string>
    <string name="okhttp_post">Okhttp Post</string>
</resources>
